# BinaryParser

./: .gitignore  .pylintrc  playground..py  pyproject.toml
.github/workflows/: ci.yml  pylint.yml
binary_parser/: __init__.py
binary_parser/chemstation/: __init__.py  read_ms_file.py
binary_parser/helper/: parser_hplc.py  parser_xray.py
binary_parser/hplc/: __init__.py  read_files.py
binary_parser/openlab/: __init__.py  openlab.py
binary_parser/xray/: __init__.py  bruker_xray.py
binary_paser/: __init__.py
binary_paser/chemstation/: __init__.py  read_ms_file.py
binary_paser/helper/: parser_ms.py  utils.py
binary_paser/hplc/: __init__.py  read_files.py
binary_paser/openlab/: __init__.py  openlab.py
binary_paser/xray/: __init__.py  bruker_xray.py
openlab/: openlab.py
tests/: chemstation_test.py  chemstation_visualisation.py  hplc_test.py  openlab_test.py
